--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,5 +22,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Latin language -- Study and teaching'
 - !lcc 'PA'
+- GITenberg
 title: A Handbook for Latin Clubs
 url: http://www.gutenberg.org/ebooks/16923
